--- a/simulation/Cargo.toml
+++ b/simulation/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Adam Gausmann <agausmann@fastmail.com>"]
 edition = "2018"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["lib", "cdylib"]
 
 [dependencies]
 gdnative = "0.8.0"
